Colaboratory kullanılarak oluşturuldu

--- a/PasswordStrengthChecker.ipynb
+++ b/PasswordStrengthChecker.ipynb
@@ -133,6 +133,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZUnMjipiL0Gt"
+      },
+      "source": [
+        "Bu veri setinde 'strength' sütununda;\n",
+        "0 şifrenin güçsüz, 1 orta, 2 ise güçlü olduğu anlamına geliyor."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -433,16 +443,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZUnMjipiL0Gt"
-      },
-      "source": [
-        "Bu veri setinde 'strength' sütununda;\n",
-        "0 şifrenin güçsüz, 1 orta, 2 ise güçlü olduğu anlamına geliyor."
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 4,
       "metadata": {
@@ -459,7 +459,7 @@
         "id": "UNqD1WKrMkDH"
       },
       "source": [
-        "İleride test edeceğimiz şifrelerin gücünü ölçmek ve etiketlemek için 0,1 ve 2 değerlerini karşılık gelen kategorik verilerine çevirdik."
+        "İleride test edeceğimiz şifrelerin gücünü ölçmek ve etiketlemek için 0,1 ve 2 değerlerini karşılık gelen kategorik veri tipine çevirdik."
       ]
     },
     {
@@ -470,9 +470,7 @@
       },
       "outputs": [],
       "source": [
-        "data[\"strength\"] = data[\"strength\"].map({0: \"Weak\",\n",
-        "                                         1: \"Medium\",\n",
-        "                                         2: \"Strong\"})"
+        "data[\"strength\"] = data[\"strength\"].map({0: \"Weak\",1: \"Medium\",2: \"Strong\"})"
       ]
     },
     {
@@ -481,7 +479,7 @@
         "id": "F1Mhj95cNK3p"
       },
       "source": [
-        "data.sample(5) ifadesi, DataFrame'den rastgele örneklemler almayı sağlar."
+        "*data*.sample() ifadesi, DataFrame'den rastgele örneklemler almayı sağlıyor."
       ]
     },
     {
@@ -786,21 +784,13 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "nlTxfr20NnUF"
-      },
       "source": [
-        "Şifrenin gücünü tahmin etmek için bir makine öğrenimi modeli eğitmeye geçelim. Modeli hazırlamaya başlamadan önce şifreleri tokenize etmemiz gerekiyor çünkü modelin şifrenin gücünü tahmin etmek için rakam, harf ve sembollerin kombinasyonlarından öğrenmesine ihtiyacımız var."
-      ]
-    },
-    {
-      "cell_type": "markdown",
+        "Modeli eğitmeye geçmeden önce şifreleri tokenlaştırmamız gerekiyor. Modelin şifrenin gücünü tahmin etmek için rakam, harf ve sembollerin kombinasyonlarından öğrenmesine ihtiyacımız var.\n",
+        "Aşağıdaki word fonksiyonu parametre olarak aldığı şifreyi karakterlerine ayırarak her bir karakteri character dizisine ekliyor. Böylece karakterlerin her birinin birbiri ile olan kombinasyonlarının şifrenin gücünü ne şekilde etkilediğini model görüş oluyor."
+      ],
       "metadata": {
-        "id": "6L-rIkO4OWWv"
-      },
-      "source": [
-        "Aşağıdaki word fonksiyonu parametre olarak şifreyi alır bunu bir ön işleme tabii tutar. Bu şifreyi karakterlerine ayırarak her bir karakteri character dizisine ekler."
-      ]
+        "id": "2RYSEaX4lpQz"
+      }
     },
     {
       "cell_type": "code",
@@ -819,11 +809,22 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Bağımsız değişken, bir denklemin veya modelin sonucunu etkileyen değişkendir ve genellikle tahmin etmeye çalıştığımız değeri (bağımlı değişkeni) etkileyen faktördür. Bağımsız değişkenler, tahmin etmeye çalıştığımız sonucu açıklamak veya öngörmek için kullanılan verilerdir.\n",
+        "\n",
+        "Makine öğrenimi bağlamında, bağımsız değişkenler modelin girdileridir ve genellikle bu değişkenler kullanılarak bağımlı değişkenin (tahmin edilecek değerin) tahmini yapılır. Yani, bağımsız değişkenlerin belirli bir değeri verildiğinde, bağımlı değişkenin tahmin edilen değeri elde edilir."
+      ],
+      "metadata": {
+        "id": "YWF-oeB5OwLx"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "cg3F6620OvTz"
       },
       "source": [
-        "password sütununu x değişkenine, strength sütununu ise y değişkenine atar. Bu, verileri bağımsız değişken (x) ve bağımlı değişken (y) olarak ayırır."
+        "Şifreleri baz alarak güç tahminin yapacağımız için password sütununu x değişkenine, strength sütununu ise y değişkenine atıyoruz."
       ]
     },
     {
@@ -840,22 +841,21 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7PesPnKhRjQI"
-      },
       "source": [
-        "Tf-idf, bir belgedeki bir terimin önemini ölçmek için kullanılan bir istatistiksel ölçüdür. Bu, bir terimin belirli bir belgedeki frekansını (terim frekansı) ve bu terimin toplam belge koleksiyonundaki görünüş sayısını (ters belge frekansı) içerir. Tf-idf, bir terimin ne kadar belirleyici olduğunu ölçer. Eğer bir terim bir belgede sık sık geçiyorsa ve genel belge koleksiyonunda nadir ise, bu terim belgenin içeriği için daha önemlidir.\n",
+        "Sklearn kütüphanesindeki TfidfVectorizer, metin verilerini temsil etmek için sıklıkla kullanılan bir vektörleştirme aracıdır. Metin verilerini sayısal vektörlere dönüştürmek, makine öğrenimi algoritmalarının doğrudan işleyebileceği bir formata getirir.\n",
         "\n",
-        "TfidfVectorizer, metin verilerini alır, belirli bir vektör uzayında her bir belgeyi bir vektör olarak temsil eder. Bu vektörler, belgedeki her terimin Tf-idf puanlarını içerir. Bu vektörler daha sonra makine öğrenimi algoritmaları gibi sayısal işleme tabi tutulabilir.\n",
+        "TfidfVectorizer özellikle sık kullanılan bir metin madenciliği ve makine öğrenimi aracıdır. İsmi \"Term Frequency-Inverse Document Frequency\" kısaltmasından gelir. Bu, metin verilerinin her bir teriminin önem derecesini sayısal olarak ifade eden bir istatistiksel ölçüdür.\n",
         "\n",
-        "Özetlemek gerekirse, TfidfVectorizer metin belgelerini sayısal vektörlere dönüştürmek için kullanılır ve bu dönüşüm, belge içindeki terimlerin önemini yansıtan Tf-idf puanlarını kullanır. Bu, metin verilerini işlemek ve makine öğrenimi modellerine girdi olarak sağlamak için yaygın olarak kullanılan bir tekniktir.\n",
+        "Term Frequency (TF): Bir belgedeki bir terimin ne kadar sık geçtiğini ifade eder. Daha fazla geçen terimler, genellikle belgenin içeriği hakkında daha fazla bilgi verir.\n",
         "\n",
+        "Inverse Document Frequency (IDF): Bir terimin ne kadar yaygın veya nadir olduğunu ölçer. Eğer bir terim nadirse, yani diğer belgelerde pek geçmiyorsa, bu terimin daha fazla ağırlığı olur. Bu şekilde, nadir terimler daha belirgin olur.\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
+        "TF-IDF, bir terimin bir belgedeki görülme sıklığını (TF) belirlerken, aynı terimin tüm belgelerdeki genel yaygınlığını (IDF) göz önünde bulundurarak bir terimin belgedeki önemini belirler. Bu, nadir terimlere daha fazla ağırlık verirken, çok yaygın olanlara az ağırlık verir.\n",
+        "TfidfVectorizer kullanıldığında, belgelerin metinlerini vektörlere dönüştürmek için kullanılır ve bu, makine öğrenimi modellerine girdi olarak verilebilir. Bu vektörler, metin verilerinin özelliklerini temsil eder ve çeşitli makine öğrenimi algoritmalarında kullanılabilir. TF-IDF, özellikle belge sınıflandırma, metin kümeleri arasındaki benzerlik hesaplama ve bilgi alaka derecelendirmesi gibi metin odaklı görevlerde yaygın olarak kullanılır."
+      ],
+      "metadata": {
+        "id": "KE0pYvWbt4GW"
+      }
     },
     {
       "cell_type": "code",
@@ -870,12 +870,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "TZ7TVLspPLG_"
-      },
       "source": [
-        "TfidfVectorizer, metin belgelerini vektörlere dönüştürmek için kullanılır. tokenizer parametresi, belirtilen metin ön işleme fonksiyonunu kullanır. Bu durumda word() fonksiyonu kullanılır."
-      ]
+        "TfidfVectorizer kullanırken tokenizer parametresi, metin verilerini vektörlere dönüştürürken kullanılacak olan belirli bir tokenleştirme işlevini belirler. Bu parametre, metinlerin nasıl parçalara ayrılacağını belirtmek için kullanılır. Genellikle, özel bir tokenleştirme işlevi belirtmek için tokenizer parametresini kullanılabilir. Biz burada kendi tokenlaştırma fonksiyonumuzu -word fonksiyonu- tanımladığımız için tokenizer parametresine onu veriyoruz."
+      ],
+      "metadata": {
+        "id": "8Y-KQYY7uMkH"
+      }
     },
     {
       "cell_type": "code",
@@ -890,12 +890,18 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "YtEmliDtR4sa"
-      },
       "source": [
-        "TfidfVectorizer'ı kullanarak parolaları vektörlere dönüştürür. Bu işlem, parola verilerini sayısal vektörlere dönüştürmek için bir TF-IDF (Term Frequency-Inverse Document Frequency) dönüşümü yapar."
-      ]
+        "Burada tdif.fit_transform(x) kodu, TfidfVectorizer'ı kullanarak belirli bir metin veri kümesini vektörlere dönüştürmek için kullanılır.\n",
+        "\n",
+        "fit_transform() yöntemi, önce belirtilen metin veri kümesini TfidfVectorizer'a uyum sağlamak için kullanılır (fit()), ardından bu veri kümesini vektörlere dönüştürmek için kullanılır (transform()).\n",
+        "\n",
+        "x genellikle bir liste veya dizide depolanan metin verilerini içerir. Her bir öğe bir belgeyi temsil eder.\n",
+        "\n",
+        "Bu kodun çalıştırılması sonucunda, metin verileri TF-IDF vektörlerine dönüştürülür ve x adlı değişkenin içeriği bu dönüştürülmüş vektörlerle güncelleniyor. Bu dönüştürülmüş vektörler, makine öğrenimi modellerine girdi olarak verilebilir. Bu, genellikle sınıflandırma, kümeleme veya diğer metin odaklı görevlerde kullanılır. Bu dönüştürme işlemi, metin verilerini sayısal bir forma dönüştürerek, makine öğrenimi modellerinin bu verileri anlayabilmesini sağlıyor."
+      ],
+      "metadata": {
+        "id": "C2hqXqTruuXn"
+      }
     },
     {
       "cell_type": "code",
@@ -973,6 +979,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Random Forest algoritması, birçok avantajı nedeniyle bu tür bir problemin çözümünde tercih edilebilir:\n",
+        "\n",
+        "Yüksek Performans: Random Forest genellikle yüksek performans sergiler. Büyük veri setlerinde ve yüksek boyutlu veri özelliklerinde bile etkili bir şekilde çalışabilir.\n",
+        "\n",
+        "Overfitting'e Karşı Direnç: Diğer karmaşık modellere kıyasla Random Forest, overfitting'e karşı daha dirençlidir. Bu, modelin eğitim verilerine aşırı uyum sağlamayı engeller ve genelleme yeteneğini artırır.\n",
+        "\n",
+        "Feature Seçimi ve Önemi Belirleme: Random Forest, her ağaçta bir alt küme özelliklerin rastgele seçilmesi nedeniyle, veri setindeki en önemli özellikleri belirleme konusunda oldukça etkilidir. Bu, modelin daha iyi anlaşılmasını sağlar ve gereksiz özelliklerin çıkarılmasına yardımcı olabilir.\n",
+        "\n",
+        "Outlier'lara Karşı Dayanıklılık: Random Forest, outlier'ları işlemek konusunda oldukça iyi bir performans sergiler. Bu, gerçek dünya veri setlerindeki gürültüye veya anormalliklere karşı dirençli olmasını sağlar."
+      ],
+      "metadata": {
+        "id": "hG1MyrQXSPR2"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* **Yüksek Doğruluk:** Random Forest, genellikle yüksek doğruluk sağlayan bir sınıflandırma algoritmasıdır.\n",
+        "* **Genelleme Yeteneği:** Random Forest, eğitim verilerine aşırı uyum gösterme eğiliminde değildir ve genelleme yeteneği yüksektir.\n",
+        "* **Özellik Önemliliği:** Random Forest, özelliklerin önemini ölçebilir ve bu bilgi, özellik seçiminde ve modelin anlaşılmasında yardımcı olabilir.\n",
+        "* **Paralel İşleme:** Random Forest, paralel işleme için uygun bir algoritmadır ve büyük veri kümelerinde eğitim ve tahmin işlemlerini hızlandırabilir.\n",
+        "* **Kararlılık:** Random Forest, eğitim verilerindeki küçük değişikliklere karşı kararlıdır ve aşırı uyum gösterme eğiliminde değildir.\n",
+        "* **Veri Tipi Esnekliği:** Random Forest, hem sayısal hem de kategorik özellikleri işleyebilir ve veri ön işleme gereksinimleri nispeten azdır."
+      ],
+      "metadata": {
+        "id": "3eny75AtSaRi"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 14,
       "metadata": {
@@ -982,6 +1019,15 @@
       "source": [
         "from sklearn.ensemble import RandomForestClassifier"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "RandomForestClassifier'ını kullanabilmek için ondan model nesnesini üretiyoruz."
+      ],
+      "metadata": {
+        "id": "Hzmwoa36wEiR"
+      }
     },
     {
       "cell_type": "code",
@@ -1000,7 +1046,7 @@
         "id": "0XzauIwBSiuN"
       },
       "source": [
-        "Oluşturulan model, eğitim veri kümesi (xtrain ve ytrain) üzerinde eğitilir. xtrain, özellik vektörlerini, ytrain ise bu özellik vektörlerine karşılık gelen hedef değişken değerlerini içerir."
+        "Oluşturulan model, eğitim veri kümesi (xtrain ve ytrain) üzerinde eğitilir. xtrain, özellik vektörlerini, ytrain ise bu özellik vektörlerine karşılık gelen hedef değişken değerlerini içeriyor."
       ]
     },
     {
@@ -1043,6 +1089,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Verilen bir accuracy değerinin iyi veya kötü olduğunu belirlemek, modelin başarısını tam olarak anlamak için yeterli değildir.\n",
+        "Model başarısını daha iyi anlamak için diğer performans ölçütlerini (confusion matrix, precision, recall, F1 score gibi metrikler)de göz önünde bulundurmak lazım. Ayrıca, modelin hiperparametrelerinin nasıl ayarlandığı, veri setinin nasıl bölündüğü gibi faktörler de modelin gerçek performansını etkileyebilir."
+      ],
+      "metadata": {
+        "id": "tXTCKZGsS0io"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
@@ -1066,23 +1122,12 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {
-        "id": "3tsalp3BLo2n"
-      },
-      "outputs": [],
-      "source": [
-        "from sklearn.feature_extraction.text import CountVectorizer"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "7JHrqnBGUFEE"
       },
       "source": [
-        "Bu, kullanıcının parolasını gizli bir şekilde girmesini sağlayan getpass modülünü içe aktarır."
+        "Bu, kullanıcının parolasını gizli bir şekilde girmesini sağlayan getpass modülünü içe aktarıyor."
       ]
     },
     {
@@ -1102,7 +1147,7 @@
         "id": "5nhCSgSvUKD1"
       },
       "source": [
-        "Kullanıcıya bir parola girmesi istenir. Kullanıcı bu parolayı girerken ekranda görüntülenmez."
+        "Kullanıcıya bir parola girmesi istiyoruz. Kullanıcı bu parolayı girerken ekranda görüntülenmez."
       ]
     },
     {
@@ -1134,7 +1179,7 @@
         "id": "fmIGBDQxUNPS"
       },
       "source": [
-        "Kullanıcının girdiği parola, daha önce oluşturulan TfidfVectorizer (tdif) kullanılarak vektör formuna dönüştürülür. transform() metodu, parolayı vektör haline getirir. toarray() metodu, bu vektörü bir numpy dizisine dönüştürür."
+        "Kullanıcının girdiği parola (user), daha önce oluşturulan TfidfVectorizer (tdif) kullanılarak vektör formuna dönüştürüyor. transform() metodu, parolayı vektör haline getirir. toarray() metodu, bu vektörü bir numpy dizisine dönüştürür."
       ]
     },
     {
@@ -1154,7 +1199,7 @@
         "id": "mPtt37neUUT5"
       },
       "source": [
-        "Model, kullanıcının girdiği parolanın gücünü tahmin etmek için kullanılır. predict() metodu, verilen giriş vektörü üzerinde modelin tahmin yapmasını sağlar."
+        "predict() metodu, verilen giriş vektörü üzerinde modelin tahmin yapmasını sağlar."
       ]
     },
     {
@@ -1174,7 +1219,7 @@
         "id": "1u_90FCVUbQU"
       },
       "source": [
-        "Modelin tahmini sonucu ekrana yazdırılır. Bu, modelin girdi parolasının tahmini gücünü ifade eder."
+        "Modelin tahmini sonucu ekrana yazdırıyoruz. Bu, modelin girdi parolasının tahmini gücünü ifade ediyor."
       ]
     },
     {
@@ -1204,7 +1249,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq18mDFuIDw5fESTT7JttG",
+      "authorship_tag": "ABX9TyMhO3JCqan/RafzTeVFYUsj",
       "include_colab_link": true
     },
     "kernelspec": {
