--- a/PasswordStrengthChecker.ipynb
+++ b/PasswordStrengthChecker.ipynb
@@ -13,6 +13,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "RandomForestClassifier algoritmasını kullanarak 'password' ve 'strength' sütunlarını içeren bir veri setinde kullanıcının girdiği şifreyi 'weak', 'medium' veya 'strong' olarak etiketleyen bir projedir."
+      ],
+      "metadata": {
+        "id": "39wBgDbnHBUq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Veri seti : https://www.kaggle.com/datasets/bhavikbb/password-strength-classifier-dataset"
       ],
       "metadata": {
@@ -21,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "-mEyOVdiKz1V"
       },
@@ -42,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -444,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "M_WMszZ9MPQO"
       },
@@ -464,7 +473,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "5F4fz4eHMTkw"
       },
@@ -794,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "LakwOOd2OSuK"
       },
@@ -829,7 +838,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Y4IHYf2KOxSO"
       },
@@ -859,7 +868,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "Vg0A-uQKO3ig"
       },
@@ -879,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "L0uVe1CkPEzh"
       },
@@ -905,7 +914,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -929,7 +938,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "gkt6_afNRve4"
       },
@@ -949,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "zfEBryRnRt57"
       },
@@ -1011,7 +1020,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "6qiVM47qSpw-"
       },
@@ -1031,7 +1040,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "MdkK6AsjSbEa"
       },
@@ -1051,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1100,7 +1109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "z6ua0b9RSLZZ",
         "colab": {
@@ -1132,7 +1141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "u0Vc3h8MUCgB"
       },
@@ -1152,7 +1161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "sG7AB7R3UIKR",
         "colab": {
@@ -1184,7 +1193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "8ywj6lh6UMbN"
       },
@@ -1204,7 +1213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "sx2hgwPRUSBT"
       },
@@ -1224,7 +1233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "OJyta2TVUX_4",
         "colab": {
@@ -1249,7 +1258,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhO3JCqan/RafzTeVFYUsj",
+      "authorship_tag": "ABX9TyO6r2cCeDP0t8j8kzcwCuHa",
       "include_colab_link": true
     },
     "kernelspec": {
